# rag

./: .dvcignore  .env.example  .gitignore  INSTRUCTIONS_FOR_AI.md  PROGRESS.md  PROJECT_CONTEXT.md  README.md  STATUS.md  docker-compose.yml  environment.yml  pyproject.toml  setup.sh
.dvc/: config
alembic/: env.py
alembic/versions/: ec69202aad8e_initial_schema.py
data/: .gitignore  rag-mini-bioasq-qrels.dvc  rag-mini-bioasq.dvc
infra/: docker-compose.yml
infrastructure/docker/postgres/: init-db.sql
notebooks/: 01_check_setup.ipynb  01_chemistry_tools.ipynb  03_faiss.ipynb  03_vector_store.ipynb  04_compare_embedders.ipynb  04_document_store.ipynb  04_embedders.ipynb  05_check_llm.ipynb  06_check_llm_prompts.ipynb  07_chunking.ipynb  07_chunking_compare_embs.ipynb  08_reranker.ipynb  09_full_pipeline.ipynb  10_postgres_db.ipynb  11_redis.ipynb  12_ragas_metrics.ipynb  13_dvc.ipynb  15_chunking_experiments.ipynb  16_langchain_basic_rag.ipynb
notebooks/archive/: 02_check_embed.ipynb  04_embedders.ipynb  08_reranker.ipynb  09_full_pipeline.ipynb  13_dvc.ipynb  14_mlflow.ipynb  15_1_semantic_chunking.ipynb  15_2_chunking_experiments.ipynb  15_chunking_experiments.ipynb  16_chunking_reranking_experiments.ipynb  17_hybrid_search.ipynb  18_entity_indexing.ipynb
src/rag/: config.py  evaluation.py  logger.py  models.py  ner.py  pipeline.py  prompts.py  tracking.py  utils.py
src/rag/agents/: tools.py
src/rag/api/: dependencies.py  main.py  models.py
src/rag/api/routes/: embed.py  health.py  query.py
src/rag/caching/: embedding.py  semantic.py
src/rag/chemistry/: __init__.py  chembl.py  parsers.py  similarity.py
src/rag/embeddings/: __init__.py  base.py  local_embedder.py
src/rag/generation/: __init__.py  base.py  local_llm.py
src/rag/ingestion/: __init__.py  chunker.py
src/rag/retrieval/: __init__.py  hybrid.py  reranker.py  vector_store.py
src/rag/storage/: __init__.py  base.py  db_models.py  models.py
src/rag/storage/document_stores/: __init__.py  memory.py  postgres.py
src/rag/storage/vector_stores/: __init__.py  faiss.py  pgvector.py
tests/: test_chemistry.py
